chore: initial setup of ai router

--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -1,97 +1,49 @@
 ---
-title: "Introduction"
-description: "Welcome to the new home for your documentation"
+sidebarTitle: 'The Idea'
+title: 'What is Microfox'
+description: 'Building the future where software is not a moat - decentralized AI agents and code distribution platform'
 ---
 
-## Setting up
+## The Microfox Vision
 
-Get your documentation site up and running in minutes.
+Microfox is a revolutionary platform designed to decentralize and distribute AI agents and code. We believe software should not be a moat in the coming world - it's time to stop treating it as such. As software becomes increasingly cheaper and more accessible, traditional SaaS models will naturally evolve.
 
-<Card
-  title="Start here"
-  icon="rocket"
-  href="/quickstart"
-  horizontal
->
-  Follow our three step quickstart guide.
+Our mission is to empower developers to build, distribute, and monetize AI agents through a decentralized ecosystem where code is modular, efficient, and accessible to all.
+
+<Card title="Get Started" icon="rocket" href="/intro/quickstart" horizontal>
+  Build your first AI agent in minutes with Microfox
 </Card>
 
-## Make it yours
-
-Design a docs site that looks great and empowers your users.
+## Core Components
 
 <Columns cols={2}>
-  <Card
-    title="Edit locally"
-    icon="pen-to-square"
-    href="/development"
-  >
-    Edit your docs locally and preview them in real time.
+  <Card title="Micro SDKs" icon="box" href="/micro-sdks/index">
+    Byte-sized SDKs for serverless environments. Highly individualized packages
+    that only include what you need, reducing bundle size and boot-up times.
   </Card>
-  <Card
-    title="Customize your site"
-    icon="palette"
-    href="/essentials/settings"
-  >
-    Customize the design and colors of your site to match your brand.
+  <Card title="Code Loop" icon="infinity" href="/code-loop/index">
+    Tools, libraries & frameworks to build coding agents. Create agents that
+    build other agents in an infinite loop of AI-powered development.
   </Card>
-    <Card
-    title="Set up navigation"
-    icon="map"
-    href="/essentials/navigation"
-  >
-    Organize your docs to help users find what they need and succeed with your product.
+  <Card title="X Framework" icon="superscript" href="/x-framework/index">
+    Framework for building AI agents with A2A, MCP, auth, HITL, and background
+    tasks support. Write once, deploy everywhere.
   </Card>
-  <Card
-    title="API documentation"
-    icon="terminal"
-    href="/api-reference/introduction"
-  >
-    Auto-generate API documentation from OpenAPI specifications.
+  <Card title="AI Router" icon="split" href="/ai-router/index">
+    Alternative to LangGraph for ai-sdk based developers. Streamline your AI
+    workflows with our routing system.
   </Card>
 </Columns>
 
-## Create beautiful pages
+## The Future of Software
 
-Everything you need to create world-class documentation.
+Traditional SaaS models are becoming obsolete as software becomes easier to build. Microfox provides the infrastructure for the next generation of software distribution:
 
-<Columns cols={2}>
-  <Card
-    title="Write with MDX"
-    icon="pen-fancy"
-    href="/essentials/markdown"
-  >
-    Use MDX to style your docs pages.
-  </Card>
-  <Card
-    title="Code samples"
-    icon="code"
-    href="/essentials/code"
-  >
-    Add sample code to demonstrate how to use your product.
-  </Card>
-  <Card
-    title="Images"
-    icon="image"
-    href="/essentials/images"
-  >
-    Display images and other media.
-  </Card>
-  <Card
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
-  >
-    Write once and reuse across your docs.
-  </Card>
-</Columns>
+- **Pay-per-use**: Only pay for what you actually use
+- **Global distribution**: Reach users worldwide through our decentralized store
+- **AI-powered creation**: Let AI agents build and maintain your code
+- **No vendor lock-in**: Choose any LLM, any framework, any deployment target
 
-## Need inspiration?
-
-<Card
-  title="See complete examples"
-  icon="stars"
-  href="https://mintlify.com/customers"
->
-  Browse our showcase of exceptional documentation sites.
+<Card title="Join the Revolution" icon="users" href="/intro/reachout">
+  Contact us & join the decentralized software movement
 </Card>
