chore: title change

--- a/docs/ai-router/overview/why.mdx
+++ b/docs/ai-router/overview/why.mdx
@@ -1,8 +1,10 @@
 ---
-title: 'The Problem: Why AI Router Exists'
+title: 'Ai Router - Introduction'
 sidebarTitle: 'Overview'
 description: 'Overview of AI Router and why it exists.'
 ---
+
+## The Problem: Why AI Router is needed
 
 Modern AI applications, especially those using helpers like the Vercel AI SDK's `useChat`, typically connect the frontend to a single backend API endpoint. This creates a significant challenge: how do you manage a complex, multi-agent system through that single route?
 
