feat: update Micro SDKs documentation with an overview and available SDKs
- Changed the title and description to provide a clearer overview of the Micro SDKs.
- Added a welcome section detailing the purpose of the documentation.
- Included a new section listing available SDKs with brief descriptions and links for each, enhancing user navigation and understanding of the offerings.

--- a/docs/micro-sdks/index.mdx
+++ b/docs/micro-sdks/index.mdx
@@ -1,6 +1,29 @@
 ---
-title: 'Micro SDKs'
-description: 'Byte-sized SDKs for serverless environments - only import what you need'
+title: 'Overview'
+description: 'Discover our collection of Micro SDKs.'
 ---
 
-Coming Soon..
+Welcome to the Micro SDKs documentation. Here you will find a collection of lightweight, purpose-built SDKs to help you integrate with various services and platforms.
+
+## Available SDKs
+
+<CardGroup>
+  <Card title="@microfox/aws-ses" href="/micro-sdks/aws-ses" icon="aws" iconType="brands">
+    A lightweight SDK for Amazon Simple Email Service (SES).
+  </Card>
+  <Card title="@microfox/brave" href="/micro-sdks/brave" icon="brave" iconType="brands">
+    An SDK for interacting with the Brave Search API.
+  </Card>
+  <Card title="@microfox/db-upstash" href="/micro-sdks/db-upstash" icon="database">
+    A TypeScript SDK for Upstash Database Utils.
+  </Card>
+  <Card title="@microfox/puppeteer-sls" href="/micro-sdks/puppeteer-sls" icon="chrome" iconType="brands">
+    A serverless-ready Puppeteer wrapper for browser automation.
+  </Card>
+  <Card title="@microfox/rag-upstash" href="/micro-sdks/rag-upstash" icon="database">
+    An SDK for building RAG applications with Upstash Vector.
+  </Card>
+  <Card title="@microfox/slack" href="/micro-sdks/slack" icon="slack" iconType="brands">
+    A collection of utilities for building Slack apps.
+  </Card>
+</CardGroup>
